# api/generate.go
@@ -1,3 +1,5 @@
 package api
 
 //go:generate go run github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen -config config.yaml ./api.yaml
+//go:generate go run github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen --include-tags products -config ./product/config.yaml ./api.yaml
+//go:generate go run github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen --include-tags order -config ./order/config.yaml ./api.yaml
